--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="bar">
         <div class="content">
             <ul>
-                <li>
+                <li class="active">
                     <span>Tweets</span>
                     <strong>3931</strong>
                 </li>
