--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                     <li><img src="img/notification.svg" alt="Notifications">Notifications</li>
                     <li><img src="img/message.svg" alt="Messages">Messages</li>
                 </ul>
-
-            </nav>
+       </nav>
             <img src="/img/logo.svg" alt="Logo Twitter">
             <div class="side">
                 <input type="text" placeholder="Search on Twitter">
@@ -55,6 +54,36 @@
               <img src="img/more.svg" alt="More">
             </div>
         </div>
+    </div>
+
+    <div class="wrapper-content content">
+        <aside class="profile">
+            <img class="avatar" src="img/avatar.png" alt="Avatar">
+            <h1>Benoit Vrins</h1>
+            <span>@Exibit</span>
+            <p> Web, Design & Rock 'n Roll Parner/UI Designer @spade_be Musician in @dashboxmusic</p>
+            <ul>
+                <li><img src="img/place.svg" alt="Place">Namur, Belgium</li>
+                <li><img src="img/url.svg" alt="URL">exibit.be</li>
+                <li><img src="img/joined.svg" alt="Joined">Joined June 2007</li>
+                <li><img src="img/born.svg" alt="Born">Born the 20th of June 1978</li> 
+            </ul>
+            <div class="widget followers">
+                <strong><img src="img/followers.svg" alt="Followers">73 followers that you know</strong>
+            </div>
+
+            <div class="widget images">
+                <strong><img src="img/images.svg" alt="Images">266 photos and videos</strong>
+            </div>
+
+        </aside>
+        <section class="timeline">
+            timeline
+        </section>
+        <aside class="widgets">
+            widgets
+        </aside>
+
     </div>
 </body>
 </html>
