--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1>Benoit Vrins</h1>
             <span>@Exibit</span>
             <p> Web, Design & Rock 'n Roll Parner/UI Designer @spade_be Musician in @dashboxmusic</p>
-            <ul>
+            <ul class="list">
                 <li><img src="img/place.svg" alt="Place">Namur, Belgium</li>
                 <li><img src="img/url.svg" alt="URL">exibit.be</li>
                 <li><img src="img/joined.svg" alt="Joined">Joined June 2007</li>
@@ -81,12 +81,19 @@
                     <li></li>
                     <li></li>
                     <li></li>
-
                 </ul>
             </div>
 
             <div class="widget images">
                 <strong><img src="img/images.svg" alt="Images">266 photos and videos</strong>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
             </div>
 
         </aside>
